--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,7 +6,8 @@ call:
   divisor: ${call_divisor:0}
 runtime:
   profile: LOCAL
-message: ${message:LOCAL} 
+  
+message: LOCAL
 
 spring:
   cloud: 
